--- a/app/views/backend/dashboards/index.html.haml
+++ b/app/views/backend/dashboards/index.html.haml
@@ -1,5 +1,15 @@
-#main-menu
-  -for mod in Ekylibre::Modules.hash.keys
-    =link_to({:action => mod}, :class=>"btn btn-big btn-#{Ekylibre::Modules.icon(mod)}", :title => Ekylibre::Modules.human_name(mod)) do
-      %span.icon
-      %span.text=Ekylibre::Modules.human_name(mod)
+=beehive do |b|
+  -b.hbox do
+    -b.cell :modules do
+      -for mod in Ekylibre::Modules.hash.keys
+        =link_to({:action => mod}, :class=>"btn btn-big btn-#{Ekylibre::Modules.icon(mod)}", :title => Ekylibre::Modules.human_name(mod)) do
+          %span.icon
+          %span.text=Ekylibre::Modules.human_name(mod)
+    -b.cell :elevage_rss
+    -b.cell :today do
+      -date = Date.today
+      %span#cell-date.date
+        %span.day-name=date.l(:format => '%A')
+        %span.day=date.day
+        %span.month=date.l(:format => '%B')
+        %span.year=date.year
