--- a/app/views/backend/cells/elevage_rss_cells/show.html.haml
+++ b/app/views/backend/cells/elevage_rss_cells/show.html.haml
@@ -1,5 +1,5 @@
 .rss-feed
-  .rss-title=@feed.title
+  -#.rss-title=@feed.title
   .rss-entries
     -for entry in @feed.entries.sort{|a,b| b.published <=> a.published }
       =link_to(entry.url, :class => "rss-entry", :target => "_blank") do
