--- a/app/themes/tekyla/stylesheets/beehive.css.scss
+++ b/app/themes/tekyla/stylesheets/beehive.css.scss
@@ -6,7 +6,7 @@
     $cell-border: $cell-border-width solid #DDD;
     $cell-title-vertical-padding: round($default-gap*1);
     $cell-title-horizontal-padding: round($default-gap*2);
-    padding: 0 $cell-border-width;
+    // padding: 0 $cell-border-width;
     margin-top: $default-gap;
     &:first-child { margin-top: 0; }
     @include clearfix;
@@ -19,8 +19,8 @@
         color: $active-color;
         font-weight: bold;
         padding: $cell-title-vertical-padding $cell-title-horizontal-padding;
-        border: $cell-border;
-        border-bottom: none;
+        // border: $cell-border;
+        // border-bottom: none;
         background: #FFF;
         @include background(linear-gradient(top, mix($active-color, white, 10%), white));
         text-align: center;
@@ -29,15 +29,15 @@
       }
 
     .cell {
-      margin-top: $default-gap;
+      // margin-top: $default-gap;
       &:first-child { margin-top: 0; }
 
 
       .cell-content {
 	padding: $cell-title-vertical-padding $cell-title-vertical-padding; /*$cell-title-horizontal-padding;*/
         // margin: $cell-title-vertical-padding $cell-title-vertical-padding;
-        border: $cell-border;
-        border-top: none;
+        // border: $cell-border;
+        // border-top: none;
         background: #FFFFFF;
         overflow: auto;
         @include clearfix;
@@ -60,10 +60,21 @@
                 &:first-child {
                   @include margin-left(0);
                 }
-                .cell-content {
-                  @if $i > 1 {
+                @if $i > 1 {
+                  .cell-title {
+                    border-left: $cell-border;
+                    border-right: $cell-border;
+                  }
+                  &:first-child .cell-title { border-left: none }
+                  &:last-child  .cell-title { border-right: none }
+
+                  .cell-content {
+                    border: $cell-border;
+                    border-top: none;
                     height: 20em;
                   }
+                  &:first-child .cell-content { border-left: none }
+                  &:last-child  .cell-content { border-right: none }
                 }
               }
             }
@@ -80,7 +91,7 @@
                 .cell-title {
                   text-decoration: none;
                   display: block;
-                  border-color: transparent;
+                  border-color: mix($active-color, white, 10%);
                   &:focus {
                     outline: none;
                   }
@@ -93,6 +104,8 @@
                     border-bottom: none;
                     padding-bottom: $cell-title-vertical-padding + $cell-border-width;
                   }
+                  &:first-child a { border-left: none }
+                  &:last-child  a { border-right: none }
                   margin-bottom: (-1 * $cell-border-width);
                 }
               }
@@ -110,8 +123,14 @@
                 }
                 .cell-inner {
                   margin-left : 0;
-                }
-                .cell-title { display: none; }
+                  .cell-title { display: none; }
+                  .cell-content {
+                    border-bottom: $cell-border;
+                    border-top: none;
+                    max-height: 20em;
+
+                  }
+		}
               }
             }
 
