--- a/app/views/backend/entities/show.html.haml
+++ b/app/views/backend/entities/show.html.haml
@@ -1,7 +1,6 @@
-=render 'backend/entities/search'
 =toolbar do |t|
+  -t.export
   -t.edit @entity
-  -t.print_entity @entity
   -t.destroy(@entity, :method => :delete, "data-confirm" => tg(:are_you_sure_you_want_to_delete)) if @entity.destroyable?
 
 =beehive do |b|
