--- a/app/views/backend/land_parcels/show.html.haml
+++ b/app/views/backend/land_parcels/show.html.haml
@@ -7,7 +7,7 @@
     -b.cell :general do
       .picture
         -#=@land_parcel.bounds.inspect
-        %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :viewBox => @land_parcel.view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "180", :height => "180"}
+        %svg{:xmlns => "http://www.w3.org/2000/svg", :version => "1.1", :class => :map, :viewBox => @land_parcel.view_box.join(" "), :preserveAspectRatio => "xMidYMid meet", :width => "180", :height => "180"}
           %path{:d => @land_parcel.shape_svg_path}
       .info
         %span.title=LandParcel.human_attribute_name(:area_measure)
