--- a/app/views/backend/dashboards/accountancy.html.haml
+++ b/app/views/backend/dashboards/accountancy.html.haml
@@ -1,3 +1,10 @@
 =render :partial=>"backend/accounts/search"
 
 =journals_tag
+
+=beehive(:accountancy) do
+  -hbox do
+    -cell :expense_chart
+    -cell :bank_chart
+  -hbox do
+    -cell :rss, :title => "Actualité Gestion et Droit", :params => {:url => "http://www.lafranceagricole.fr/Rss/gestion-et-droit/actu-gestion-14676.html"}
