Changes some style to unify menus

--- a/app/themes/tekyla/stylesheets/colors.css.scss
+++ b/app/themes/tekyla/stylesheets/colors.css.scss
@@ -1,3 +1,10 @@
-$base-color: #688ED8; //#2BA6CB; // #7A1; //#2BA6CB (ZURB) // #16D (Google)
-$neutral-color: #777;
-$active-color: $base-color; // #DE7308; // mix(green, $base-color, 50%);
+// Specify here all settigns for the theme
+
+// Base color
+// $base-color: #688ED8; //#2BA6CB; // #7A1; //#2BA6CB (ZURB) // #16D
+
+// Neutral color
+// $neutral-color: #777;
+
+// Active color
+// $active-color: $base-color; // #DE7308; // mix(green, $base-color, 50%);
