--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -22,14 +22,14 @@ $fs-large:     round($fs-ratio*$fs-normal);
 $fs-huge:      round($fs-ratio*$fs-large);
 $fs-very-huge: round($fs-ratio*$fs-huge);
 
-$link-color:  darken($base-color, 27%);
-$link-color:  darken($base-color, 10%);
-$text-color:  #111;
-$base-font-color:  #222;
-$base-font-reversed-color:  #FFF;
-$title-color: darken($base-color, 40%);
-$important-color: #D88E68;
-$invalid-color: red;
+$fingertip-height: 32px !default;
+$fingertip-height: 2 * round($fingertip-height / 2);
+
+$base-color: #688ED8 !default;
+$neutral-color: #777 !default;
+$desktop-background: #FFFFFF !default;
+$text-color: #222 !default;
+
 $hover-transparency: 0.85;
 $hover-mask: transparentize($base-color, $hover-transparency);
 
@@ -37,9 +37,16 @@ $hover-mask: transparentize($base-color, $hover-transparency);
   @return mix($background-color, opacify($hover-mask, 1), percentage($hover-transparency));
 }
 
-//$base-color: #95b0e4;
-//$link-color: $base-color; /* #3162C0; /* 02C */
-$desktop-background: #FFFFFF;
+
+$active-color: $base-color;
+$link-color:  darken($base-color, 27%);
+$link-color:  darken($base-color, 10%);
+$title-color: darken($base-color, 40%);
+$base-font-color:  $text-color;
+$base-font-reversed-color:  #FFF;
+$important-color: #D88E68;
+$invalid-color: red;
+
 $neutral-background: change-color($neutral-color, $lightness: 90%);
 $input-background: $desktop-background;
 $light-color: mix($base-color, $desktop-background, 50%); /* #C9D7F1 */
@@ -49,9 +56,9 @@ $menu-border-color: mix($menu-background, #000000, 87%);
 $menu-border-width: floor($fs-normal / 10);
 $menu-border: $menu-border-width solid $menu-border-color;
 $menu-width: $fs-normal * 13;
-$menu-padding: 2*$menu-border-width;
-$menu-height:      2 * ceil($fs-normal * 0.875);
-$menu-text-height: 2 * ceil($fs-normal * 0.655);
+$menu-padding: $menu-border-width;
+$menu-height:  $fingertip-height;
+$menu-text-height: 2 * round(1.4 * $fs-normal / 2);
 $input-border: $menu-border-width solid mix($desktop-background, $neutral-color, 60%);
 $label-width: 25%;
 
@@ -62,7 +69,6 @@ $default-gap: round($fs-normal * 0.55);
 $cell-background: mix($desktop-background, $base-color, 82%);
 $cell-background-current: mix($desktop-background, $base-color, 62%);
 
-
 $buttons-names: (new create) (edit update) (destroy abort) (search) (confirm validate) (cancel) (lock) (unlock) (action reflect default) (up) (down) (left) (right) (configure) (column) (table) (duplicate) (point) (mark) (unmark) (true) (false) (page) (spreadsheet) (print) (filter) (mail) (nomail) (sort) (check) (divide) (load) (logout) (increment) (decrement) (close) (help) (merge) (spread) (rgreen) (rblue) (rblack) (nav) (general-informations) (genealogy) (group) (care) (treatment) (drug) (entity) (delay) (stock) (asset) (animal) (vegetable) (document) (movement);
 $buttons-states: hover whited active disabled normal;
 $buttons-radius: $default-border-radius;
@@ -71,8 +77,7 @@ $buttons-formats: ("themes/tekyla/icons-16.png" 24px "&" $buttons-radius) ("them
 $passive-bg: $menu-background;
 $active-bg: $base-color;
 
-/*@import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic);*/
-$sans-font-family: 'Open Sans', 'Droid Sans', 'Liberation Sans', Helvetica, sans-serif;
+$sans-font-family: 'Open Sans', 'Droid Sans', 'Liberation Sans', Helvetica, sans-serif !default;
 $base-font-family: $sans-font-family;
 
 $header-font-family: $base-font-family;
@@ -81,14 +86,10 @@ $body-font-size: $fs-normal;
 $em-base: $fs-normal;
 $primary-color: $base-color;
 
-$topbar-height: 32px;
-$topbar-bg: $active-color;
-$topbar-dropdown-bg: $topbar-bg;
+$topbar-height: $fingertip-height !default;
 
 $global-radius: $default-border-radius;
 $include-html-classes: false;
-
-
 
 @function visible-color($background-color) {
   @if lightness($background-color) > 70% {
@@ -108,8 +109,6 @@ $include-html-classes: false;
   }
 }
 
-
-
 @mixin calc($property, $expression) {
   #{$property}: -webkit-calc(#{$expression});
   #{$property}: -moz-calc(#{$expression});
@@ -117,7 +116,6 @@ $include-html-classes: false;
   #{$property}: -o-calc(#{$expression});
   #{$property}: calc(#{$expression});
 }
-
 
 
 @mixin is-icon($size: round(1.2 * $fs-normal)) {
@@ -253,7 +251,7 @@ $include-html-classes: false;
   border: $menu-border;
   // width: $menu-width;
   padding: $menu-padding;
-  &, * {
+  &, li a {
     font-weight: normal;
     color: $text-color;
   }
@@ -264,49 +262,58 @@ $include-html-classes: false;
   padding: 0;
   height: $menu-height;
   width: $menu-width;
-  list-style-type:none;
-  &:hover {
+  list-style-type: none;
+  &:hover a {
+    outline: none;
     background: $menu-background-hover;
-    @include border-radius($default-border-radius);
+    @include transition(background 0.4s, box-shadow 0.4s);
   }
-  &.no-link {
+  &.disabled, &[disabled] {
     background: transparent;
     cursor: default;
     pointer-events: none;
   }
+  &.separator {
+    @include menu-separator;
+  }   
   a {
-    $padding: ($menu-height - $menu-text-height)/2;
+    $vertical-padding: ($menu-height - $menu-text-height)/2;
+    $horizontal-padding: round(1.2 * $vertical-padding);
     display: block;
-    padding: $padding;
-    &, & span {
-      height: $menu-text-height;
+    padding: $vertical-padding $horizontal-padding;
+    font-size: $fs-normal;
+    line-height: $menu-text-height;
+    height: $menu-text-height;
+    vertical-align: middle;
+    i {
+      @include is-icon();
+      @include inline-block;
+      width: $fs-normal;
+      color: $text-color;
       line-height: $menu-text-height;
+      height: $menu-text-height;
       vertical-align: middle;
+      @include margin-left(0);
+      @include margin-right($horizontal-padding);
     }
-    span.icon {
-      /*@include inline-block;*/
-      display: block;
-      float: left;
-      padding: 0;
-      height:16px;
-      width: 16px;
-      margin: (($menu-text-height - 16px)/2) 0;
-      @include margin-right($padding);
-    }
-    span.text {
-      /*@include inline-block;*/
-      display: block;
-      float: left;
-      padding: 0;
-      margin: 0;
-      width: $menu-width - 16px - 3 * $padding;
-      font-weight: normal;
-      white-space: nowrap;
-      overflow: hidden;
-      @include ellipsis;
+    &:focus, &:active {
+      outline: none;
     }
   }
 }
+
+@mixin dropdown-menu($vpos: bottom, $hpos: end) {
+  @include menu;
+  position: absolute;
+  display: none;
+  li {
+    @include float(none);
+    @include menu-item;
+  }
+  right: 0;
+  z-index: 5;
+}
+
 
 @mixin menu-separator {
   height: $menu-border-width;
@@ -429,7 +436,7 @@ $include-html-classes: false;
   & > * {
     display: none;
   }
-  & > #{$group} {
+  & #{$group} {
     display: block;
     @include inline-block;
     @include button-group;
@@ -438,7 +445,7 @@ $include-html-classes: false;
       @include margin-left(0);      
     }
   }
-  & > #{$group}, & {
+  & #{$group}, & {
     @include button-group;
     @include inline-block;
   }
