--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -499,7 +499,7 @@ $mini-screen: 1024px;
 
 
 @import "foundation/components/global";
-@import "foundation/components/grid";
+// @import "foundation/components/grid";
 // @import "foundation/components/top-bar";
 // @import "foundation/components/buttons";
 
