--- a/app/views/backend/document_templates/index.html.haml
+++ b/app/views/backend/document_templates/index.html.haml
@@ -1,6 +1,6 @@
 -# Eclated automatically (2011-06-08)
 =main_toolbar do |t|
   -t.new
-  -t.link :load, {}, "data-confirm" => tg(:are_you_sure), :method=>:post
+  -t.load_ "data-confirm" => tg(:are_you_sure), :method=>:post
 
 =list
